fixed overlapping selector

--- a/highwayInstruction/HWI_main.css
+++ b/highwayInstruction/HWI_main.css
@@ -114,7 +114,6 @@ table {
 .rightside {
     font-family: "Pompiere", "Julius Sans One";
     display: inline-block;
-    width: 30vw;
     position: absolute;
     top:42%;
     right: 6vw;
@@ -160,41 +159,41 @@ li {
 }
 
 .table:nth-of-type(2) {
-    margin-left: 1vw;
+    margin-left: 0.5vw;
 }
 
-.table  {
+.table {
     border-collapse:collapse;
     border-spacing:0;
     display: inline-block;
     vertical-align: text-top;
 }
+.table_row {
+    width: 5vw;
+    height: 4vh;
+}
+
 .table .table_top{
     font-family: "Julius Sans One", Arial, sans-serif;
-    font-size:1vw;
-    padding:0.7vw 0.5vw;
-    border-style:solid;border-width:0.1vw;
-    overflow:hidden;word-break:normal;
+    padding:1vh 0.5vw;
+    border-style:solid;
+    border-width:0.1vw;
+    overflow:hidden;
+    word-break:normal;
     border-color:rgb(82, 10, 10);
     font-weight: 900;
+    font-size: 1vw;
 }
 .table .table_element{
     font-family:"Julius Sans One", Arial, sans-serif;
-    font-size:1vw;
-    font-weight:normal;
-    padding:0.7vw 0.5vw;
+    padding:1vh 0.5vw;
     border-style:solid;
     border-width:0.1vw;
     overflow:hidden;
     word-break:normal;
     border-color:rgb(82, 10, 10);
     font-weight: 700;
-}
-.table .table_element{
-    border-color:inherit;
-    text-align:center;
-    vertical-align:top;
-    font-weight: 700;
+    font-size: 1vw;
 }
 .table .t_strong {
     font-weight: 900;
